# kinematics

./: CMakeLists.txt  README.md
include/: Kinematics.h  Tests.h  Util.h
src/: Kinematics.c  Tests.c  Util.c  main.c
